--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,19 @@
   "description": "mobileapp backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "nodemon --watch './**/*.ts' --exec 'ts-node' index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "pg": "^8.11.3",
+    "pg-promise": "^11.5.4",
+    "typeorm": "^0.3.20"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.25"
   }
 }
