--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
     "react-native-table-component": "^1.2.2"
