--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-google-signin/google-signin": "^11.0.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.8",
     "expo-status-bar": "~1.11.1",
+    "express": "^4.19.1",
+    "pg": "^8.11.3",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-app-intro-slider": "^4.0.4",
