gesture handler imported

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
-    "react-native-table-component": "^1.2.2"
+    "react-native-table-component": "^1.2.2",
+    "react-native-gesture-handler": "~2.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
