--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "mobileapp backend",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon index.ts"
+		"dev": "nodemon src/server.ts"
   },
   "author": "",
   "license": "ISC",
