--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-google-signin/google-signin": "^11.0.0",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.8",
+    "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
     "express": "^4.19.1",
     "pg": "^8.11.3",
@@ -21,10 +23,11 @@
     "react-native": "0.73.4",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
     "react-native-table-component": "^1.2.2",
-    "react-native-gesture-handler": "~2.14.0"
+    "react-native-reanimated": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
